--- a/index.html
+++ b/index.html
@@ -7,6 +7,29 @@
         <script src="./script.js" defer></script>
     </head>
     <body>
+        <div class="calculator">
+            <div class="display"></div>
+            <div class="calc-btns">
+                    <button class="digit">7</button>
+                    <button class="digit">8</button>
+                    <button class="digit">9</button>
+                    <button class="operator">÷</button>
+            
+                    <button class="digit">4</button>
+                    <button class="digit">5</button>
+                    <button class="digit">6</button>
+                    <button class="operator">x</button>
 
+                    <button class="digit">1</button>
+                    <button class="digit">2</button>
+                    <button class="digit">3</button>
+                    <button class="operator">−</button>
+
+                    <button class="digit">0</button>
+                    <button class="period">.</button>
+                    <button class="equals">=</button>
+                    <button class="operator">+</button>
+            </div>
+        </div>
     </body>
 </html>
