Add clear button to calculator and style it

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <body>
         <div class="calculator">
             <div class="display"></div>
+            <button class="clear">CLEAR</button>
             <div class="calc-btns">
                     <button class="digit">7</button>
                     <button class="digit">8</button>
